Fix masonry layout issue

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-	width: 800px;
+	width: 1100px;
 }
 
 .tophalf {
